--- a/Chat/WebContent/Login.jspx
+++ b/Chat/WebContent/Login.jspx
@@ -8,10 +8,70 @@
 		omit-xml-declaration="true" />
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="StyleSheet" href="${pageContext.request.contextPath}/res/helpdesk.css" type="text/css" title="cse4413" media="screen, print" />
+<link rel="StyleSheet"
+    href="${pageContext.request.contextPath}/res/style.css" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Montserrat'
+    rel='stylesheet' type='text/css' />
+<link
+    href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+    rel="stylesheet" />
+
 <title>NeedHelp/Login</title>
 </head>
 <body>
+
+    <!--  Nav bar starts here -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" >SecureDesk</a>
+            </div>
+        </div>
+    </nav>
+    <!--  Nav bar ends here -->
+    <div class="container">
+
+        <div class="col-md-12 col-sm-12">
+            <div class="page-header">
+                <h1>Login to SecureDesk</h1>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+
+                <form method="GET" class="form-signin" role="form" id="login-form" action="">
+                    <h2 class="form-signin-heading">Please sign in</h2>
+                    <label for="username" class="sr-only">Username</label> 
+                    <input
+                        type="text" id="username" name="username" class="form-control"
+                        placeholder="UserName" /><br/>
+                    
+                    <label for="password" class="sr-only">Password</label>
+                    <input type="password" id="password" class="form-control" name="password"
+                        placeholder="Password" /><br/>
+                        
+                    <img src="/Chat/simpleCaptcha.png"/><br/>
+                    <br/>
+                    <label for="captcha" class="sr-only">Captcha</label>
+                    <input type="text" id ="captcha_answer" name="captcha_answer" class="form-control"
+                        placeholder="Enter the image text"/>
+                    <div class="checkbox">
+                        <label> <input type="checkbox" value="remember-me" />
+                            Remember me
+                        </label>
+                    </div>
+                </form>
+                <button form="login-form" class="btn btn-lg btn-success btn-block" type="submit" name="Checkout" value="checkout">Sign
+                    in</button>
+
+            </div>
+            <!-- /container -->
+
+        </div>
+
+    </div>
+
+
+
+<!-- 
 <div id="form_div">
     <form method="GET" class="form-signin" role="form" id="login-form" action="">
         <legend id="my_legend">Aditya's HelpDesk|LOGIN</legend>
@@ -27,7 +87,7 @@
         <button form="login-form" class="btn btn-lg btn-success btn-block" type="submit" name="Checkout" value="checkout">Sign in</button>
     </form>
 </div>
-    
+ -->    
 </body>
 </html>
 </jsp:root>
