--- a/Chat/WebContent/SetName.jspx
+++ b/Chat/WebContent/SetName.jspx
@@ -8,21 +8,63 @@
         omit-xml-declaration="true" />
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="StyleSheet" href="${pageContext.request.contextPath}/res/helpdesk.css" type="text/css" title="cse4413" media="screen, print" />
-<title>NeedHelp/Login</title>
+<link rel="StyleSheet"
+    href="${pageContext.request.contextPath}/res/style.css" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Montserrat'
+    rel='stylesheet' type='text/css' />
+<link
+    href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+    rel="stylesheet" />
+
+<title>NeedHelp/Help</title>
 </head>
 <body>
+
+    <!--  Nav bar starts here -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" >SecureDesk</a>
+            </div>
+        </div>
+    </nav>
+    <!--  Nav bar ends here -->
+    <div class="container">
+
+        <div class="col-md-12 col-sm-12">
+            <div class="page-header">
+                <h1>Login to SecureDesk</h1>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+
+                <form method="GET" class="form-signin" role="form" id="name-form" action="">
+                    <h2 class="form-signin-heading">Enter Thy Name</h2>
+                    
+                    <label for="name" class="sr-only">Name</label> 
+                    <input
+                        type="text" id="name" name="name" class="form-control"
+                        placeholder="ThyName" /><br/>
+                </form>
+                <button form="name-form" class="btn btn-lg btn-success btn-block" type="submit" name="Checkout" value="checkout">Enter</button>
+
+            </div>
+            <!-- /container -->
+
+        </div>
+
+    </div>
+
+
+<!-- 
 <div>
     <form method="GET" id="name-form" action="">
-        <legend id="my_legend">Aditya's HelpDesk|LOGIN</legend>
+        <legend id="my_legend">|LOGIN</legend>
         <p>Please let us know how we can address you!!! To serve you better.</p>
-        <label for="username" class="sr-only">Name: </label>
-        <input type="text" id="Name" name="name" placeholder="Your Name" autofocus="autofocus"/>
         <br/>
         <button type="submit">SendName</button>
     </form>
 </div>
-    
+     -->
 </body>
 </html>
 </jsp:root>
