--- a/Chat/WebContent/HelpDeskUser.jspx
+++ b/Chat/WebContent/HelpDeskUser.jspx
@@ -10,68 +10,102 @@
 		omit-xml-declaration="true" />
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="StyleSheet" href="${pageContext.request.contextPath}/res/helpdesk.css" type="text/css" title="cse4413" media="screen, print" />
-<title>HelpDesk</title>
+<link
+    href="${pageContext.request.contextPath}/res/bootstrap.css"
+    rel="stylesheet" />
+    
+<link href='http://fonts.googleapis.com/css?family=Montserrat'
+    rel='stylesheet' type='text/css' />
+
+<title>SecureDesk</title>
 <script>
     $(document).ready(function() {                        // When the HTML DOM is ready loading, then execute the following function...
-        getMsgs();
-        getHelpers();
-        getUsers();
-        updateTransfers();
-        updateToken();
+       runHelperCalls();
+    });
+    
+    $(document).ready(function() {
+    	newToken();
     });
     
 </script>
 </head>
 <body>
+  <!--  Nav bar starts here -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand">SecureDesk</a>
+            </div>
+        </div>
+    </nav>
+    <!--  Nav bar ends here -->
     <div>
-        <div id="transfer_users">
-        </div>
+        <br/>
+        <br/>
+        <br/>
     </div>
-
-
-
-<div id="chat_box">
-<div id="form_div">
-	<table border='1' style="width:100%; height:100px">
-	<div id="buddy_name">
-	   <div>
-	    <legend id="my_legend">Aditya's HelpDesk</legend>
-	   </div>
-	</div>
-	    <tr>
-	        <td style="width:80%">
-	            <div id="divScroll" class="scroll">
-	                <textarea id="somediv" readonly="readonly" class="content" rows="20" cols="150">${msg}</textarea>
-	            </div>
-	        </td>
-	        <td style="height:450px; width:100%">
-	          <div style="overflow:scroll" class="scroll">
-	            <div>
-	               <div id="clients">
-	               </div>
-	            </div>
-                
-                <div id="helper_tag">
-                    <p>Helpers</p>
-                    <div id="helpers">
-                </div>
-                </div>
-                
-                
-              </div>
-	        </td> 
-	    </tr>
-	</table>
-	<div>
-        <div id="error">
+    
+    <div class="container">
+        <div class="col-md-12 col-sm-12">
+            <div class="col-md-8 col-sm-12">
+                <label id="error" for="chat_area">Welcome to SecureDesk</label>
+                <textarea id="somediv" readonly="readonly" class="form-control" rows="15" cols="150">${msg}</textarea>
+                            <label for="msg">
+                            <textarea class="form-control" id="msg" name="message" cols="150" rows="3" placeholder="Type Your Message" autofocus="autofocus"><jsp:text></jsp:text></textarea>
+                    <button id="somebutton" class="btn btn-lg btn-success btn-block" name="send_msg" onclick="sendMessage()">SEND</button> 
+            </label></div>
+            <div class="col-md-4 col-sm-12">
+                <br/>
+                <div class="col-md-12 col-sm-12">
+                    <div class="panel panel-success">
+                    <div class="panel-heading">OnlineClients</div>
+                    <div class="panel-body">
+                         <div>
+                            <div id="clients">
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+                 </div>
+                 
+                 <div class="col-md-12 col-sm-12">                 
+                 <div class="panel panel-success">
+                   <div class="panel-heading">OnlineHelpers</div>
+                   <div class="panel-body">
+                        <div id="helper_tag">
+                            <div id="helpers">
+                            </div>
+                        </div>
+                    </div>
+                    </div>                 
+                 </div>
+                 
+                 <div class="col-md-12 ol-sm-12">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">TransferUsers</div>
+                        <div class="panel-body">
+                            <div>
+                                <div id="transfer_users">
+                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+             </div>
         </div>
+</div>
+ <div>
+    <div id="secTok">
+        <p><div id="secTokValue" hidden="hidden">${secToken}</div></p>
     </div>
-        
-	<textarea id="msg" name="message" cols="40" rows="4" autofocus="autofocus"><jsp:text></jsp:text></textarea>
-	<br/> <button  id="somebutton" name="send_msg" onclick="sendMessage()">SEND</button>  
 </div>
+
+<div>
+    <div id="transfer_users">
+    </div>
 </div>
+
+
 </body>
 </html>
 </jsp:root>
