Changed the submit from GET to POST Changed context to match context from the previous version. Note:Context has just EECS4481 for both local and global, this is not the case in the old one. It has CSE4481 for local. However this works too.

--- a/Chat/WebContent/HelpDeskUser.jspx
+++ b/Chat/WebContent/HelpDeskUser.jspx
@@ -27,6 +27,10 @@
     	newToken();
     });
     
+    $(document).ready(function() {
+    	TransUpdate();
+    });
+    
 </script>
 </head>
 <body>
