--- a/Chat/WebContent/Login.jspx
+++ b/Chat/WebContent/Login.jspx
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-4 col-md-offset-4">
 
-                <form method="GET" class="form-signin" role="form" id="login-form" action="">
+                <form method="POST" class="form-signin" role="form" id="login-form" action="">
                     <h2 class="form-signin-heading">Please sign in</h2>
                     <label for="username" class="sr-only">Username</label> 
                     <input
